# Assembler

./: README.md
Assembler/: BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
Assembler/cmake/: install-config.cmake  install-rules.cmake  variables.cmake
Assembler/example/: CMakeLists.txt
Assembler/include/Assembler/: Assembler.hpp
Assembler/source/: Assembler.cpp
Assembler/test/: CMakeLists.txt
Assembler/test/source/: Assembler_test.cpp
